--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		</div>
 		<div class="overflow">
 			<p>
-				Hello there !. we at <span >princess signature</span> have been expecting you!!
+				Hello there!  weat <span >princess signature</span> have been expecting you!!
 				
 			</p>
 		</div>
