--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 	<link rel="icon" href="./logo">
 
 	<link rel="stylesheet" href="./assets/css/main.css">
-	<script src="https://kit.fontawesome.com/6dab609444.js" crossorigin="anonymous"></script>
+	<script src="https:/cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js"></script>
+
+	<link rel="stylesheet" href="">
 		
 	
 </head>
@@ -26,12 +28,13 @@
 				<li><a href="#home">Home</a></li>
 				<li><a href="#recents">recents</a></li>
 				<li><a href="#our-goal">our goal</a></li>
-				<li><a href="#about-us">About</a></li>
+				<li><a href="#about-us">about</a></li>
 			</ul>
 		
 		</div>
 	</header>
 	<main>
+		</div>
 		<div class="hero" id="home">
 			<div class="content">
 				<p>your No.1 choice for hairdo design & styling. </p>
@@ -39,7 +42,7 @@
 		</div>
 		<div class="overflow">
 			<p>
-				Hello there!  weat <span >princess signature</span> have been expecting you!!
+				Hello there!  we at <span >princess signature</span> have been expecting you!!
 				
 			</p>
 		</div>
@@ -54,7 +57,7 @@
 	<div id="our-goal">
 			<h2 class="desc">our goal</h2>
 			 <p class="msg">
-			 	no more seeking for good designers to handle your simple or complex hairdo styling. we've got you covered. beauty is a choice. let us walk with you on every step of the way.
+			 	Quit seeking for good designers to handle your simple or complex hairdo styling. we've got you covered. beauty is a choice. let us walk with you on every step of the way.
 			 </p>
 			
 		</div>
@@ -66,7 +69,7 @@
 			<div class="container">
 					<div class="left">
 					<p class="speech">
-					looks tell the whole story, and our goal is to give you that unique touch well suited for you. on whichever style you may prefer, our goal is to make you stand out from the rest. you're a unique princess!!
+					Looks tell the whole story. Our goal is to give you that unique touch well suited for you. whichever style you prefer, what drives us is making you stand out from the rest. you're a unique princess!
 						</p>
 
 					<blockquote>CEO</blockquote>
@@ -85,9 +88,9 @@
 			<div class="contact-card">
 				<div class="left"><div class="logo"><img src="./logo.png" alt=""></div></div>
 				<div class="right">
-				<p class="tel"><i class="fa-solid fa-phone"></i><a href="tel:08106813155">call</a></p>
-				<p class="whatsapp"><i class="fa-brands fa-whatsapp-square"><a href="https://www.wa.link/knw8v7">whatsapp</a> </i></p>
-				<p class="email"><i class="fa-solid fa-envelopes"></i>Email</p>
+				<p class="tel"><a href="tel:08106813155"> <i class="fa-solid fa-phone"></i> </a>call</p>
+				<p class="whatsapp"> <a href="https://www.wa.link/knw8v7"><i class="fa-brands fa-whatsapp"> </i></a>whatsapp</p>
+				<p class="email"><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>instagram</p>
 				</div>
 
 			</div>
@@ -95,10 +98,18 @@
 		</div>
 	</section>
 	</main>
-	<footer><div class="footer-img"><img src="./logo.png" alt=""></div></footer>
+	<footer><div class="footer-img"><img src="./logo.png" alt=""></div>
+		<div class="dev-contact">
+			<p>developer's contact:</p>
+		<span>mrxyfactor@gmail.com</span>
+		</div>
+		
+	<p> princess signature copyright &copy; 2022</p>
+	
+	</footer>
 
 		<script src="./assets/js/jquery-3.6.0.min.js" type="text/javascript"></script>
 		<script src="./assets/js/app.js"></script>	
-		<script src="./assets/js/myJquery.js"></script>
+		<script src="./myJquery.js"></script>
 	</body>
 </html>
