--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 	<link rel="icon" href="./logo">
 
 	<link rel="stylesheet" href="./assets/css/main.css">
-	<script src="https:/cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js"></script>
+	<script src="https:/www.cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js"></script>
 
-	<link rel="stylesheet" href="">
+
 		
 	
 </head>
